--- a/views/index.ejs
+++ b/views/index.ejs
@@ -36,7 +36,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="#">全部相册 <span class="sr-only">(current)</span></a></li>
-                    <li><a href="#">上传</a></li>
+                    <li><a href="/up/upload">上传</a></li>
                 </ul>
 
             </div><!-- /.navbar-collapse -->
@@ -54,7 +54,7 @@
             </div>
         <% } %>
     </div>
-s
+
 
 <!-- jQuery (Bootstrap 的所有 JavaScript 插件都依赖 jQuery，所以必须放在前边) -->
 <script src="/lib/jquery/jquery.min.js"></script>
